fixe transition mobile 10

--- a/styles/components/global/footer.scss
+++ b/styles/components/global/footer.scss
@@ -87,6 +87,9 @@ footer {
             }
         }
     }
+    @media (max-width: 992px) {
+      display: none;
+    }
     @media (max-width: 468px) {
         .flex-wrapper {
             flex-direction: column;
